# google_calendar_sync

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  sync_to_notion.py  webhook_server.py
